Added fonts. Began working on news section.

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,4 +1,10 @@
 
+// .news-cards {
+//     img {
+//         width: 100%;
+//     }
+// }
+
 // .post {
 // 	margin: 20px 0;
 // 	border-bottom: 1px #efefef solid;
