--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,3 +6,25 @@
 a:hover {
     text-decoration: none;
 }
+
+h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: $font-sz-3;
+    text-transform: capitalize;
+
+    @include mq('md') {
+        font-size: $font-sz-2;
+    }
+}
+
+h2 {
+    font-size: $font-sz-4;
+}
+
+h3 {
+    font-size: $font-sz-5;
+    @include mq('m') {
+        font-size: $font-sz-5;
+    }
+}
