--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,15 +1,35 @@
-.nav-bar{
-    ul{
-        text-align: center;
-        li{
-            display: inline-block;
-        }
-    }
-    a{
+.nav-bar
+{
+    a
+    {
         margin-left: 15px;  
-        opacity: 1;
+        color: white;
     }
-    background-color: black;
-    opacity: 0.5;
+    .current_page_item a
+    {
+        color: rgba(249, 105, 14, 1);
+    }
+    
+
+    .container
+    {
+        ul{
+            .nav
+            {
+                width: 30rem;
+                font-size: x-large;
+                text-align: center;
+            }
+            flex-direction: row;
+            text-align: center;
+            justify-content: end;
+        }
+        display: flex;
+        justify-content: end;
+    }
+
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 100px;
+    
 }
 
