--- a/style.css
+++ b/style.css
@@ -166,20 +166,42 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .nav-bar {
-  background-color: black;
-  opacity: 0.5;
-}
-
-.nav-bar ul {
-  text-align: center;
-}
-
-.nav-bar ul li {
-  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100px;
 }
 
 .nav-bar a {
   margin-left: 15px;
-  opacity: 1;
+  color: white;
+}
+
+.nav-bar .current_page_item a {
+  color: #f9690e;
+}
+
+.nav-bar .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.nav-bar .container ul {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-align: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.nav-bar .container ul .nav {
+  width: 30rem;
+  font-size: x-large;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
