--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,15 +2,15 @@
 {
     a
     {
-        margin-left: 15px;  
+        margin-left: 15px;
+        margin-right: 15px;  
         color: white;
+        font-size: 20px;
     }
     .current_page_item a
     {
         color: rgba(249, 105, 14, 1);
     }
-    
-
     .container
     {
         ul{
@@ -22,14 +22,29 @@
             }
             flex-direction: row;
             text-align: center;
-            justify-content: end;
+            justify-content: flex-end;
         }
         display: flex;
-        justify-content: end;
+        
+    }
+    .navbar { 
+        .container-fluid{
+            justify-content: end;
+            justify-content: right;
+            justify-content: space-evenly;
+        }
     }
 
     background-color: rgba(0, 0, 0, 0.6);
     height: 100px;
+    .fa-search{
+        // padding-left: 10px;
+        font-size: 25px;
+        transform: rotate(90deg);
+        color: white;
+        &:hover{
+            cursor: pointer;
+        }
+    }
     
 }
-
