--- a/style.css
+++ b/style.css
@@ -188,10 +188,17 @@ h3 {
   font-size: 1.25rem;
 }
 
-@media (min-width: 768px) {
-  h3 {
-    font-size: 1.25rem;
-  }
+body .header-img-container {
+  width: 100%;
+  height: 700px;
+  overflow: hidden;
+}
+
+body .fa-chevron-down {
+  position: absolute;
+  font-size: 100px;
+  left: 48%;
+  top: 65%;
 }
 
 .our-services {
@@ -566,7 +573,9 @@ h3 {
 
 .nav-bar a {
   margin-left: 15px;
+  margin-right: 15px;
   color: white;
+  font-size: 20px;
 }
 
 .nav-bar .current_page_item a {
@@ -577,9 +586,6 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
 }
 
 .nav-bar .container ul {
@@ -590,13 +596,36 @@ h3 {
   text-align: center;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: end;
+          justify-content: flex-end;
 }
 
 .nav-bar .container ul .nav {
   width: 30rem;
   font-size: x-large;
   text-align: center;
+}
+
+.nav-bar .navbar .container-fluid {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.nav-bar .fa-search {
+  font-size: 25px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  color: white;
+}
+
+.nav-bar .fa-search:hover {
+  cursor: pointer;
 }
 
 footer {
