--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,3 +24,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
         'header',  
         'nav',
         'footer';
+
+// Plugins
+@import 'contact';
