--- a/style.css
+++ b/style.css
@@ -188,9 +188,45 @@ h3 {
   font-size: 1.25rem;
 }
 
+.section-promotion {
+  padding: 30px 0;
+}
+
+.promo-img {
+  border-radius: 50%;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+.promo-text {
+  text-align: center;
+}
+
+@media (min-width: 576px) {
+  .promo-text {
+    text-align: left;
+  }
+}
+
+.promo-text h3 {
+  margin-bottom: 50px;
+  font-weight: 600;
+}
+
 @media (min-width: 768px) {
-  h3 {
-    font-size: 1.25rem;
+  .promo-text h3 {
+    font-size: 1.563rem;
+  }
+}
+
+.promo-text p {
+  font-size: 0.8rem;
+}
+
+@media (min-width: 768px) {
+  .promo-text p {
+    font-size: 1rem;
   }
 }
 
@@ -240,7 +276,7 @@ h3 {
 }
 
 .our-services .ser p {
-  font-size: .75rem;
+  font-size: 0.8rem;
   font-weight: 500;
   max-width: 200px;
   margin: 0 auto 1rem;
@@ -310,7 +346,7 @@ h3 {
     margin: 1rem 0;
   }
   .our-services .ser .ser-btn {
-    font-size: 1.2rem;
+    font-size: 1.25rem;
     padding: .5rem 1.5rem;
     border-radius: 10px;
   }
@@ -628,5 +664,148 @@ h3 {
 
 footer {
   background-color: #d8d8d8;
+}
+
+.section-contact {
+  background-color: #007eff;
+  padding: 40px 0;
+}
+
+.section-contact h1 {
+  color: white;
+}
+
+.section-contact label {
+  color: white;
+  width: 100%;
+  font-size: 1.25rem;
+}
+
+.section-contact p {
+  margin-bottom: 8px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+textarea {
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  padding: 6px 10px;
+}
+
+textarea {
+  font-size: 1rem;
+  resize: none;
+}
+
+span.wpcf7-list-item {
+  margin: 0;
+}
+
+input[type="submit"] {
+  background-color: #ff7800;
+  color: white;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 3px 13px 0 13px;
+  height: 35px;
+  font-size: 1.563rem;
+  font-weight: 500;
+  height: 50px;
+  padding: 0 40px;
+  margin: 0 auto;
+}
+
+input[type="submit"]:hover {
+  background-color: #e06a00;
+}
+
+.wpcf7-form p:last-of-type {
+  text-align: center;
+}
+
+/* Hide HTML5 Up and Down arrows. */
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+/* Customize the label (the container) */
+.checkbox-wrapper {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 22px;
+  margin-left: 20px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-wrapper input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30px;
+  width: 30px;
+  border-radius: 5px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-wrapper:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-wrapper input:checked ~ .checkmark {
+  background-color: #ff7800;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-wrapper input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-wrapper .checkmark:after {
+  left: 11px;
+  top: 5px;
+  width: 8px;
+  height: 17px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 /*# sourceMappingURL=style.css.map */
