--- a/style.css
+++ b/style.css
@@ -218,6 +218,10 @@ body .fa-chevron-down:hover {
   cursor: pointer;
 }
 
+.space {
+  padding-top: 7rem;
+}
+
 .section-promotion {
   padding: 30px 0;
 }
@@ -656,7 +660,7 @@ body .fa-chevron-down:hover {
   background-color: rgba(0, 0, 0, 0.6);
   height: 100px;
   position: fixed;
-  top: 15;
+  top: 2rem;
   z-index: 10;
   width: 100vw;
 }
