--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,6 +7,21 @@ a:hover {
     text-decoration: none;
 }
 
+
+section {
+
+    padding: 40px 0 50px 0;
+
+    @include mq('s') {
+        padding: 70px 0 60px 0;
+    }
+
+    @include mq('m') {
+        padding: 50px 0 50px 0;
+    }
+}
+
+// Main page title
 h1 {
     text-align: center;
     font-weight: 600;
@@ -18,10 +33,19 @@ h1 {
     }
 }
 
+// Main section headings
 h2 {
-    font-size: $font-sz-4;
+    text-align: center;
+    font-weight: 600;
+    font-size: $font-sz-3;
+    text-transform: capitalize;
+
+    @include mq('md') {
+        font-size: $font-sz-2;
+    }
 }
 
 h3 {
     font-size: $font-sz-5;
+    font-weight: 600;
 }
