--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -28,10 +28,6 @@ body
 /// Promotion
 ///////////////////////////////////////
 
-.section-promotion {
-    padding: 30px 0;
-}
-
 .promo-img {
     border-radius: 50%;
     width: 100%;
@@ -43,23 +39,26 @@ body
 .promo-text {
     text-align: center;
 
-    @include mq('s') {
+    @include mq('l') {
         text-align: left;
+
+        padding: 0 80px;
     }
 
     h3 {
         margin-bottom: 50px;
 
-        font-weight: 600;
+        font-weight: 700;
         @include mq('m') {
             font-size: $font-sz-4;
         }
     }
 
     p {
-        font-size: $font-sz-7;
+        font-size: $font-sz-6;
         @include mq('m') {
-            font-size: $font-sz-6;
+            font-size: $font-sz-5;
+            line-height: 1.5;
         }
 
     }
@@ -68,7 +67,20 @@ body
 ////////////////////////////////////////
 /// Services
 ///////////////////////////////////////
+
 .our-services {
+
+    padding: 10px 0 50px 0;
+
+    @include mq('m') {
+        padding: 20px 0 50px 0;
+    }
+
+    @include mq('l') {
+        padding: 50px 0 50px 0;
+    }
+
+
     background-color: #DADADA;
     height: auto;
     .ser-ico {
@@ -86,35 +98,37 @@ body
         text-align: center;
         color: #fff;
     }
-    .row {
-        padding-top: 15px;        // <-- Bootstrap grids have no vertical spacing.
-    }                             // Giving spacing to row top so the padding isn't duplcated between cards.
-    .ser {                        //
-        padding-bottom: 15px;     // 15px matches the deafult left/right value -->
 
-        a {
-        padding: 10px;
-        }
+    p {
+        margin-top: 20px;
+        font-size: $font-sz-5;
+    }
+
+    .ser {
+
+        margin-top: 30px;
+
         text-align: center;
         h3, p {
-            font-weight: lighter;
-            color: #fff;
+            color: white;
         }
         h3 {
             font-size: $font-sz-5;
             margin: .5rem 0;
         }
         p {
-            font-size: $font-sz-7;
+            
+            font-size: $font-sz-6;
             font-weight: 500;
-            max-width: 200px;
+            max-width: 250px;
             margin: 0 auto 1rem;   // Centering paragraph as it has a set width giving spacing aswell.
         }
         .ser-con {
-            //padding: 1.5rem;
             background-color: #FF7900;
             border-radius: 10px;
-            //height: 100%;
+
+            display: block;
+            padding: 30px;
         }
         .ser-btn {
             width: 180px;
@@ -123,10 +137,10 @@ body
             background-color: rgba(#fff, .95);
             border: none;
             border-radius: 5px;
-            padding: .25rem .75rem;
+            padding: .4rem 1rem;
             color: #FF7900;
             text-transform: uppercase;
-            font-weight: 500;
+            font-weight: 600;
             &:hover {
                 background-color: rgba(#fff, .85);
             }
@@ -145,6 +159,14 @@ body
                 color: #FF7900;
             }
 
+            h3 {
+                font-weight: 800;
+            }
+
+            p {
+                font-weight: 800;
+            }
+
             .ser-ico {
                 background-color: #FF7900;
 
@@ -161,8 +183,8 @@ body
     .our-services {
         background-color: #FF7900;      // Background color changes to card color to mask shape.
         .container {
-            padding-top: 5rem;
-            padding-bottom: 3.5rem;
+            //padding-top: 5rem;
+            //padding-bottom: 3.5rem;
         }
         .ser-title {
             display: block;               // Title is diplayed in desktop sizes.
@@ -190,7 +212,7 @@ body
             }
 
             .ser-con {
-                padding: 0;
+                padding: 20px 10px;
             }
         }
     }
@@ -203,16 +225,20 @@ body
 .section-expertise {
     text-align: center;
 
-    padding: 40px 0;
+    h2 {
+        margin-bottom: 20px;
+    }
 
     img {
         width: 100%;
     }
 
-    p { // sub heading
+    >p { // sub heading
         font-size: $font-sz-6;
 
-        @include mq('md') {
+        margin-bottom: 40px;
+
+        @include mq('m') {
             font-size: $font-sz-5;
         }
     }
@@ -261,16 +287,16 @@ body
 
 .section-testimonials {
     background-color: $col-bg-grey;
-    padding-top: 30px;
-    padding-bottom: 15px;
+    // padding-top: 30px;
+    // padding-bottom: 15px;
 
-    h1 {
+    h2 {
         margin-bottom: 30px;
     }
 
     @include mq('m') {
-        padding-top: 60px;
-        h1 {
+        //padding-top: 60px;
+        h2 {
             margin-bottom: 60px;
         }
     }
@@ -280,10 +306,10 @@ body
     background-color: white;
     
     padding: 15px 20px 15px 20px;
-    margin-bottom:30px;
     margin-left: 0;
     margin-right: 0;
 
+    margin-top: 40px;
 
     img {
         width: 100px;
@@ -293,7 +319,7 @@ body
 
     button {
         @include button($col-primary);
-        margin-left: auto;
+        margin-right: auto;
     }
 
     @include mq('s') {
@@ -313,6 +339,12 @@ body
         float: left;
         margin-right: 15px;
     }
+
+    @include mq('m') {
+        h3 {
+            margin-left: 0;
+        }
+    }
 }
 
 @media only screen and (min-width: map-get($breakpoints, 'm')) {
@@ -323,7 +355,6 @@ body
 
         padding: 0;
         
-        margin-bottom: 50px;
 
         img {
             width: 100%;
@@ -361,6 +392,15 @@ body
 
 }
 
+@media only screen and (min-width: map-get($breakpoints, 'xl')) {
+    .testimonial-content {
+        padding: 30px 40px 40px 50px;
+        p {
+            margin-top: 20px;
+        }
+    }
+}
+
 ////////////////////////////////////////
 /// Latest News
 ///////////////////////////////////////
@@ -369,20 +409,38 @@ body
 
     img {   // size article feature images to span column width
         width: 100%;
+        height: auto;
     }
 
-    >h1 {   // Letest news heading
-        padding-top: 35px;
+    >h2 {   // Letest news heading
+        //padding-top: 35px;
         padding-bottom: 10px;
     }
 
     >p {
+        font-size: $font-sz-5;
         text-align: center;
+        margin-bottom: 0;
+    }
+
+    >div {
+        @include mq('m') {
+            height: 418px;
+            overflow: hidden;
+        }
+    }
+
+    >div {
+        @include mq('l') {
+            height: auto;
+            overflow: default;
+        }
     }
 }
 
 .news-card {
-    margin-bottom: 40px;
+    margin-top: 30px;
+
 }
 
 .news-card-content {
