--- a/style.css
+++ b/style.css
@@ -173,6 +173,22 @@ a:hover {
   text-decoration: none;
 }
 
+section {
+  padding: 40px 0 50px 0;
+}
+
+@media (min-width: 576px) {
+  section {
+    padding: 70px 0 60px 0;
+  }
+}
+
+@media (min-width: 768px) {
+  section {
+    padding: 50px 0 50px 0;
+  }
+}
+
 h1 {
   text-align: center;
   font-weight: 600;
@@ -181,11 +197,15 @@ h1 {
 }
 
 h2 {
-  font-size: 1.563rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.953rem;
+  text-transform: capitalize;
 }
 
 h3 {
   font-size: 1.25rem;
+  font-weight: 600;
 }
 
 .findOutMore {
@@ -209,10 +229,6 @@ body .fa-chevron-down {
   top: 65%;
 }
 
-.section-promotion {
-  padding: 30px 0;
-}
-
 .promo-img {
   border-radius: 50%;
   width: 100%;
@@ -224,15 +240,16 @@ body .fa-chevron-down {
   text-align: center;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 992px) {
   .promo-text {
     text-align: left;
+    padding: 0 80px;
   }
 }
 
 .promo-text h3 {
   margin-bottom: 50px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 @media (min-width: 768px) {
@@ -242,18 +259,32 @@ body .fa-chevron-down {
 }
 
 .promo-text p {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 @media (min-width: 768px) {
   .promo-text p {
-    font-size: 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
   }
 }
 
 .our-services {
+  padding: 10px 0 50px 0;
   background-color: #DADADA;
   height: auto;
+}
+
+@media (min-width: 768px) {
+  .our-services {
+    padding: 20px 0 50px 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .our-services {
+    padding: 50px 0 50px 0;
+  }
 }
 
 .our-services .ser-ico {
@@ -273,22 +304,18 @@ body .fa-chevron-down {
   color: #fff;
 }
 
-.our-services .row {
-  padding-top: 15px;
+.our-services p {
+  margin-top: 20px;
+  font-size: 1.25rem;
 }
 
 .our-services .ser {
-  padding-bottom: 15px;
+  margin-top: 30px;
   text-align: center;
 }
 
-.our-services .ser a {
-  padding: 10px;
-}
-
 .our-services .ser h3, .our-services .ser p {
-  font-weight: lighter;
-  color: #fff;
+  color: white;
 }
 
 .our-services .ser h3 {
@@ -297,15 +324,17 @@ body .fa-chevron-down {
 }
 
 .our-services .ser p {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: 500;
-  max-width: 200px;
+  max-width: 250px;
   margin: 0 auto 1rem;
 }
 
 .our-services .ser .ser-con {
   background-color: #FF7900;
   border-radius: 10px;
+  display: block;
+  padding: 30px;
 }
 
 .our-services .ser .ser-btn {
@@ -314,10 +343,10 @@ body .fa-chevron-down {
   background-color: rgba(255, 255, 255, 0.95);
   border: none;
   border-radius: 5px;
-  padding: .25rem .75rem;
+  padding: .4rem 1rem;
   color: #FF7900;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .our-services .ser .ser-btn:hover {
@@ -337,6 +366,14 @@ body .fa-chevron-down {
   color: #FF7900;
 }
 
+.our-services .ser:hover h3 {
+  font-weight: 800;
+}
+
+.our-services .ser:hover p {
+  font-weight: 800;
+}
+
 .our-services .ser:hover .ser-ico {
   background-color: #FF7900;
 }
@@ -348,10 +385,6 @@ body .fa-chevron-down {
 @media only screen and (min-width: 992px) {
   .our-services {
     background-color: #FF7900;
-  }
-  .our-services .container {
-    padding-top: 5rem;
-    padding-bottom: 3.5rem;
   }
   .our-services .ser-title {
     display: block;
@@ -377,21 +410,31 @@ body .fa-chevron-down {
     margin: .5rem auto 1.5rem;
   }
   .our-services .ser .ser-con {
-    padding: 0;
+    padding: 20px 10px;
   }
 }
 
 .section-expertise {
   text-align: center;
-  padding: 40px 0;
+}
+
+.section-expertise h2 {
+  margin-bottom: 20px;
 }
 
 .section-expertise img {
   width: 100%;
 }
 
-.section-expertise p {
+.section-expertise > p {
   font-size: 1rem;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+  .section-expertise > p {
+    font-size: 1.25rem;
+  }
 }
 
 .carousel-caption {
@@ -432,19 +475,14 @@ body .fa-chevron-down {
 
 .section-testimonials {
   background-color: #dadada;
-  padding-top: 30px;
-  padding-bottom: 15px;
 }
 
-.section-testimonials h1 {
+.section-testimonials h2 {
   margin-bottom: 30px;
 }
 
 @media (min-width: 768px) {
-  .section-testimonials {
-    padding-top: 60px;
-  }
-  .section-testimonials h1 {
+  .section-testimonials h2 {
     margin-bottom: 60px;
   }
 }
@@ -452,9 +490,9 @@ body .fa-chevron-down {
 .testimonial-card {
   background-color: white;
   padding: 15px 20px 15px 20px;
-  margin-bottom: 30px;
   margin-left: 0;
   margin-right: 0;
+  margin-top: 40px;
 }
 
 .testimonial-card img {
@@ -474,7 +512,7 @@ body .fa-chevron-down {
   font-weight: 600;
   padding: 3px 13px 0 13px;
   height: 35px;
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .testimonial-card button:hover {
@@ -497,11 +535,16 @@ body .fa-chevron-down {
   margin-right: 15px;
 }
 
+@media (min-width: 768px) {
+  .testimonial-card:nth-child(even) h3 {
+    margin-left: 0;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .testimonial-card {
     background-color: none;
     padding: 0;
-    margin-bottom: 50px;
   }
   .testimonial-card img {
     width: 100%;
@@ -545,25 +588,50 @@ body .fa-chevron-down {
   }
 }
 
+@media only screen and (min-width: 1200px) {
+  .testimonial-content {
+    padding: 30px 40px 40px 50px;
+  }
+  .testimonial-content p {
+    margin-top: 20px;
+  }
+}
+
 .section-news {
   background-color: #e8f5ff;
 }
 
 .section-news img {
   width: 100%;
+  height: auto;
 }
 
-.section-news > h1 {
-  padding-top: 35px;
+.section-news > h2 {
   padding-bottom: 10px;
 }
 
 .section-news > p {
+  font-size: 1.25rem;
   text-align: center;
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .section-news > div {
+    height: 418px;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 992px) {
+  .section-news > div {
+    height: auto;
+    overflow: default;
+  }
 }
 
 .news-card {
-  margin-bottom: 40px;
+  margin-top: 30px;
 }
 
 .news-card-content {
@@ -711,11 +779,17 @@ footer {
 
 .section-contact {
   background-color: #007eff;
-  padding: 40px 0;
 }
 
-.section-contact h1 {
+.section-contact h2 {
   color: white;
+  margin-bottom: 30px;
+}
+
+@media (min-width: 992px) {
+  .section-contact h2 {
+    margin-bottom: 50px;
+  }
 }
 
 .section-contact label {
@@ -743,6 +817,7 @@ textarea {
   font-size: 1rem;
   resize: none;
   height: 150px;
+  color: grey;
 }
 
 span.wpcf7-list-item {
@@ -765,6 +840,7 @@ input[type="submit"] {
   height: 50px;
   padding: 0 40px;
   margin: 0 auto;
+  margin-top: 20px;
 }
 
 input[type="submit"]:hover {
