I have styled the header now working on footer

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -46,6 +46,20 @@
             cursor: pointer;
         }
     }
+    .-search_pos{
+        position: relative;
+        top: 15px;
+    }
+    .vis{
+        display: block;
+    }
+    .blank{
+        position: relative;
+        top: 15px;
+        color: red;
+        display: none;
+    }
+
     position: fixed;
     top: 2rem;
     z-index: 10;
