--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,42 +1,74 @@
-.navbar {
-    background-color: rgba(0, 0, 0, 0.6);
-    //height: 100px;
 
+.navbar {
+    background-color: rgba(black, 0.6);
     align-items: flex-end;
-    // padding-top: 40px;
-    // padding-bottom: 15px;
 
     padding: 0;
     border-bottom: 2px solid darken(white, 30%);
 }
 
 .navbar-logo {
-    width: 150px;
+    width: 170px;
 }
 
+// Logo wrapper used to set height of navbar
 .navbar-brand {
     margin-top: 1rem;
-    margin-bottom: 0.7rem;
+    margin-bottom: 0.9rem;
 }
 
+// Wrapper for navigation links
 .navbar-nav {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding-right: 4%;
 
     color: white;
 
+    margin-top: 20px;
+    font-weight: 500;
 }
 
+// Individual navigation links <li>
+.menu-item {
+    @include mq('l') {
+        margin-left: 30px;
+    }
+
+    &:hover {
+        color: darken(white, 20%);
+    }
+}
+
+// Class attribute of page currently being viewed
+.current-menu-item {
+    color: $col-primary;
+
+    &:hover {
+        color: darken($col-primary, 10%);
+    }
+}
+
+// Search button icon.
 .button-search {
     margin:0;
+    margin-left: 10px;
     padding:0;
     border:0;
     color: white;
     background: none;
+
+    &:focus {
+        outline: none;
+    }
+
+    &:hover {
+        color: $col-primary;
+    }
 }
 
+// Burger menu button
 .navbar-toggler {
     border-radius: 0;
     background-color: $col-primary;
@@ -46,13 +78,14 @@
 
     color: white;
     font-size: 3rem;
-    padding: 0.5rem 1rem;
+    padding: 0.65rem 1rem;
 }
 
 .navbar-toggler:focus {
     outline: none;
 }
 
+// Revert to usual padding for the container
 @media (max-width: 767.98px) {
     .navbar-expand-md > .container {
         padding-left: 15px;
@@ -60,11 +93,24 @@
     }
 }
 
-@media (min-width: 576px) {
-    .form-inline .form-control {
-        width: 100%;
-    }
+// Search bar
+.form-inline .form-control {
+    width: 100%;
+    height: 2rem;
 }
+
+// Removes wrapping for search bar and icon
+.form-inline {
+    flex-flow: initial;
+}
+
+// Adds padding to search bar when mobile menu is open
+.navbar-collapse.show .form-inline {
+    padding-bottom: 10px;
+}
+
+
+
 
 
 .nav-bar
