--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ h3 {
   font-weight: 600;
 }
 
+.space {
+  padding-top: 72px;
+}
+
 .header-img-container {
   width: 100%;
   height: 80vh;
@@ -698,7 +702,7 @@ h3 {
 
 @media (min-width: 768px) {
   .news-card-content {
-    padding: 25px 20px 30px 35px;
+    padding: 25px 20px 30px 20px;
   }
 }
 
@@ -778,12 +782,12 @@ h3 {
 }
 
 .navbar-logo {
-  width: 150px;
+  width: 170px;
 }
 
 .navbar-brand {
   margin-top: 1rem;
-  margin-bottom: 0.7rem;
+  margin-bottom: 0.9rem;
 }
 
 .navbar-nav {
@@ -791,18 +795,48 @@ h3 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding-right: 4%;
   color: white;
+  margin-top: 20px;
+  font-weight: 500;
+}
+
+@media (min-width: 992px) {
+  .menu-item {
+    margin-left: 30px;
+  }
+}
+
+.menu-item:hover {
+  color: #cccccc;
+}
+
+.current-menu-item {
+  color: #ff7800;
+}
+
+.current-menu-item:hover {
+  color: #cc6000;
 }
 
 .button-search {
   margin: 0;
+  margin-left: 10px;
   padding: 0;
   border: 0;
   color: white;
   background: none;
+}
+
+.button-search:focus {
+  outline: none;
+}
+
+.button-search:hover {
+  color: #ff7800;
 }
 
 .navbar-toggler {
@@ -813,7 +847,7 @@ h3 {
   right: 0;
   color: white;
   font-size: 3rem;
-  padding: 0.5rem 1rem;
+  padding: 0.65rem 1rem;
 }
 
 .navbar-toggler:focus {
@@ -827,10 +861,20 @@ h3 {
   }
 }
 
-@media (min-width: 576px) {
-  .form-inline .form-control {
-    width: 100%;
-  }
+.form-inline .form-control {
+  width: 100%;
+  height: 2rem;
+}
+
+.form-inline {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: initial;
+          flex-flow: initial;
+}
+
+.navbar-collapse.show .form-inline {
+  padding-bottom: 10px;
 }
 
 .nav-bar {
@@ -912,6 +956,71 @@ h3 {
   top: 15px;
   color: red;
   display: none;
+}
+
+.service-header {
+  padding-bottom: 15px;
+}
+
+.service-header h1 {
+  text-align: left;
+  font-size: 2.441rem;
+}
+
+.ser-min.our-services {
+  padding: 0;
+}
+
+.ser-min.our-services .ser {
+  margin-top: 0;
+}
+
+.ser-min.our-services .ser .ser-con {
+  padding: 0;
+  margin: 20px;
+  padding: 10px;
+  padding-top: 20px;
+  width: 150px;
+  height: 150px;
+}
+
+.ser-min.our-services .ser-ico {
+  font-size: 2.1rem;
+  height: 4rem;
+  width: 4rem;
+}
+
+.ser-min-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#ser-current {
+  background-color: white;
+}
+
+#ser-current h3, #ser-current p {
+  color: #FF7900;
+}
+
+#ser-current h3 {
+  font-weight: 800;
+}
+
+#ser-current p {
+  font-weight: 800;
+}
+
+#ser-current .ser-ico {
+  background-color: #FF7900;
+}
+
+#ser-current .ser-ico i {
+  color: white;
 }
 
 footer {
