--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,7 +23,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 @import 'main',
         'header',  
         'nav',
-        'footer';
+        'footer',
+        'about';
 
 // Plugins
 @import 'contact';
