--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
         'header',  
         'nav',
         'services',
-        'footer';
+        'footer',
+        'entry';
 
 // Plugins
 @import 'contact';
