--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,3 +1,26 @@
+.ser-banner {
+    height: 400px;
+    background-image: url("images/banner.png");
+    background-size: cover;
+    background-position: left;
+
+    padding-top: 170px;
+    margin-top: -72px;
+
+    h1 {
+        color: white;
+        font-size: 4rem;
+        text-align: left;
+        font-weight: 600;
+    }
+
+    p {
+        font-size: $font-sz-4;
+        font-weight: 400;
+        color: white;
+    }
+}
+
 .service-header {
     h1 {
         text-align: left;
@@ -17,10 +40,13 @@
             padding: 0;
             margin: 20px;
             padding: 10px;
-            padding-top: 20px;
 
             width: 150px;
-            height: 150px;
+            height: 120px;
+
+            h3 {
+                margin: 10px 0 0 0;
+            }
 
         }
     }
