--- a/style.css
+++ b/style.css
@@ -213,8 +213,12 @@ h3 {
   font-weight: 600;
 }
 
-.space {
+body {
   padding-top: 72px;
+}
+
+body.home {
+  padding-top: 0;
 }
 
 .header-img-container {
@@ -696,6 +700,7 @@ h3 {
 }
 
 .news-card-content {
+  height: 200px;
   padding: 28px 22px;
   background-color: white;
 }
@@ -877,6 +882,12 @@ h3 {
   padding-bottom: 10px;
 }
 
+.fixed-top.scrolled {
+  background-color: rgba(0, 0, 0, 0.9) !important;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
+}
+
 .nav-bar {
   background-color: rgba(0, 0, 0, 0.6);
   height: 100px;
@@ -958,6 +969,28 @@ h3 {
   display: none;
 }
 
+.ser-banner {
+  height: 400px;
+  background-image: url("images/banner.png");
+  background-size: cover;
+  background-position: left;
+  padding-top: 170px;
+  margin-top: -72px;
+}
+
+.ser-banner h1 {
+  color: white;
+  font-size: 4rem;
+  text-align: left;
+  font-weight: 600;
+}
+
+.ser-banner p {
+  font-size: 1.563rem;
+  font-weight: 400;
+  color: white;
+}
+
 .service-header {
   padding-bottom: 15px;
 }
@@ -979,9 +1012,12 @@ h3 {
   padding: 0;
   margin: 20px;
   padding: 10px;
-  padding-top: 20px;
   width: 150px;
-  height: 150px;
+  height: 120px;
+}
+
+.ser-min.our-services .ser .ser-con h3 {
+  margin: 10px 0 0 0;
 }
 
 .ser-min.our-services .ser-ico {
@@ -1122,6 +1158,29 @@ footer address {
 
 #linkedin {
   background-color: #0077b5;
+}
+
+/* Page entry formatting and style */
+.entry-content h2 {
+  font-size: 2.441rem;
+  text-align: initial;
+  text-transform: initial;
+}
+
+.entry-content h3 {
+  font-size: 1.953rem;
+}
+
+.entry-content h4 {
+  font-size: 1.563rem;
+}
+
+.entry-content h5 {
+  font-size: 1.25rem;
+}
+
+.entry-content h6 {
+  font-size: 1rem;
 }
 
 .section-contact {
