--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -32,8 +32,8 @@ $font-sz-9: 0.512rem;
 ///////////////////////////////////////
 
 $breakpoints: (
-	's': 576px,
-	'm': 768px,
-    'l': 992px,
+	'sm': 576px,
+	'md': 768px,
+    'lg': 992px,
     'xl': 1200px
 );
