--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,11 +18,11 @@ section, footer {
 
     padding: 40px 0 50px 0;
 
-    @include mq('s') {
+    @include mq('sm') {
         padding: 70px 0 60px 0;
     }
 
-    @include mq('m') {
+    @include mq('md') {
         padding: 50px 0 50px 0;
     }
 }
@@ -46,9 +46,9 @@ h2 {
     font-size: $font-sz-3;
     text-transform: capitalize;
 
-    @include mq('md') {
-        font-size: $font-sz-2;
-    }
+    // @include mq('md') {
+    //     font-size: $font-sz-2;
+    // }
 }
 
 h3 {
