--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -9,7 +9,7 @@
 
         margin-bottom: 30px;
 
-        @include mq('l') {
+        @include mq('lg') {
           margin-bottom: 50px;
         }
     }
