--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,5 +27,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
         'footer',
         'entry';
 
+// Pages
+@import 'news';
+
 // Plugins
 @import 'contact';
