--- a/style.css
+++ b/style.css
@@ -182,13 +182,13 @@ section, footer {
   padding: 40px 0 50px 0;
 }
 
-@media (min-width: 576px) {
+@media only screen and (min-width: 576px) {
   section, footer {
     padding: 70px 0 60px 0;
   }
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   section, footer {
     padding: 50px 0 50px 0;
   }
@@ -199,6 +199,12 @@ h1 {
   font-weight: 600;
   font-size: 1.953rem;
   text-transform: capitalize;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 2.441rem;
+  }
 }
 
 h2 {
@@ -251,7 +257,7 @@ body.home {
   line-height: 1.3;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .header-img-container h1 {
     font-size: 4rem;
     margin-bottom: 30px;
@@ -263,7 +269,7 @@ body.home {
   margin-bottom: 140px;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .header-img-container p {
     margin-bottom: 160px;
   }
@@ -302,7 +308,7 @@ body.home {
   text-align: center;
 }
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .promo-text {
     text-align: left;
     padding: 0 80px;
@@ -314,7 +320,7 @@ body.home {
   font-weight: 700;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .promo-text h3 {
     font-size: 1.563rem;
   }
@@ -324,7 +330,7 @@ body.home {
   font-size: 1rem;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .promo-text p {
     font-size: 1.25rem;
     line-height: 1.5;
@@ -337,13 +343,13 @@ body.home {
   height: auto;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .our-services {
     padding: 20px 0 50px 0;
   }
 }
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .our-services {
     padding: 50px 0 50px 0;
   }
@@ -493,7 +499,7 @@ body.home {
   margin-bottom: 40px;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .section-expertise > p {
     font-size: 1.25rem;
   }
@@ -543,7 +549,7 @@ body.home {
   margin-bottom: 30px;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .section-testimonials h2 {
     margin-bottom: 60px;
   }
@@ -581,7 +587,7 @@ body.home {
   background-color: #e06a00;
 }
 
-@media (min-width: 576px) {
+@media only screen and (min-width: 576px) {
   .testimonial-card {
     margin-left: -15px;
     margin-right: -15px;
@@ -597,7 +603,7 @@ body.home {
   margin-right: 15px;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .testimonial-card:nth-child(even) h3 {
     margin-left: 0;
   }
@@ -681,14 +687,7 @@ body.home {
   margin-bottom: 0;
 }
 
-@media (min-width: 768px) {
-  .section-news > div {
-    height: 418px;
-    overflow: hidden;
-  }
-}
-
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .section-news > div {
     height: auto;
     overflow: default;
@@ -705,7 +704,7 @@ body.home {
   background-color: white;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .news-card-content {
     padding: 25px 20px 30px 20px;
   }
@@ -745,7 +744,7 @@ body.home {
   background-color: #e06a00;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .news-card-content button {
     padding: 2px 20px 0 20px;
   }
@@ -793,6 +792,7 @@ body.home {
 .navbar-brand {
   margin-top: 1rem;
   margin-bottom: 0.9rem;
+  margin-left: 1rem;
 }
 
 .navbar-nav {
@@ -809,7 +809,11 @@ body.home {
   font-weight: 500;
 }
 
-@media (min-width: 992px) {
+.menu-item {
+  font-size: 1.4rem;
+}
+
+@media only screen and (min-width: 768px) {
   .menu-item {
     margin-left: 30px;
   }
@@ -1086,7 +1090,7 @@ footer address {
   line-height: 1.2;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   footer {
     text-align: left;
   }
@@ -1120,7 +1124,7 @@ footer address {
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .social a {
     margin: 0;
   }
@@ -1138,7 +1142,7 @@ footer address {
   height: 60px;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .social li {
     margin-left: 10px;
   }
@@ -1183,6 +1187,33 @@ footer address {
   font-size: 1rem;
 }
 
+.pagination {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.pagination a:hover {
+  text-decoration: underline;
+}
+
+@media only screen and (min-width: 768px) {
+  .news-page .news-card:nth-of-type(9) {
+    display: none;
+  }
+  .news-latest .news-card:nth-of-type(3) {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .news-page .news-card:nth-of-type(9) {
+    display: block;
+  }
+  .news-latest .news-card:nth-of-type(3) {
+    display: block;
+  }
+}
+
 .section-contact {
   background-color: #007eff;
 }
@@ -1192,7 +1223,7 @@ footer address {
   margin-bottom: 30px;
 }
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .section-contact h2 {
     margin-bottom: 50px;
   }
